fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 
-
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
 
 /* .counter {
   font-size: 16px;
